# LHL_Lectures

W1D3/: W01D03_cohort_May02.ipynb
W2D3/: W2D3.ipynb
W5D2/: W05D2_LogReg.ipynb
W5D2/.ipynb_checkpoints/: W05D2_LogReg-checkpoint.ipynb
W5D4/: W5D4.ipynb
W5D4/.ipynb_checkpoints/: W5D4-checkpoint.ipynb
W7D2/: NOTES.md  demo.tgz  newpairname.pem
W7D2/demo/: app.py  example_model.ipynb  model.pkl  pyproject.toml  test.py
