[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Eithar Elbasheer <eithar.elbasheer@teck.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
pandas = "^1.4.2"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
